[4 - 6단계 방탈출 사용자 예약] 타칸(최원준) 미션 제출합니다. (#98)
* refactor: 인기 테마를 가져오는 책임을 ReservationService -> ThemeService 로 변경

* refactor: 불필요한 메서드 삭제

* refactor: 객체 생성 전, 검증이 일어나도록 수정

* refactor: DTO 에서 비즈니스 외 검증 추가

* docs: 4단계 기능 요구사항 작성

* feat: 이메일 도메인 추가

* feat: 유저 도메인 추가

* refactor: 패키지분리

- API 응답과 뷰 응답을 분리해줌

* feat: 로그인 페이지 응답 구현

* feat: 로그인 요청 기능 구현

* feat: 토큰 생성 기능 구현

* feat: 유저 -> 멤버 변경 및 저장소 구현

* feat: 로그인시 검증 구현

* feat: 로그인 정보 조회 기능 구현

* feat: 로그아웃 기능 구현

* docs: 5단계 요구사항 목록 작성

* refactor: ArgumentResolver 구현

* feat: 예약 스키마가 유저 id를 가지도록 리팩터링

* feat: 관리자 예약 생성 기능 구현

* feat: 회원 도메인에 역할 추가

* feat: TODO 삭제 및 DirtiesContext 클래스모드 통일

* docs: 6단계 요구사항 목록 작성

* feat: 관리자 페이지 접근제한 기능 구현

* feat: 조건을 이용해 예약 검색 기능 구현

* refactor: 로그인 컨트롤러 분리

* refactor: 불필요한 Optional 삭제

* test: admin reservation 테스트 추가

* test: MemberController 테스트 추가

* refactor: 예외 컨트롤러 패키지 재배치

* refactor: 주입 방식 통일 및 불필요한 import 삭제

* test: 테스트 로그인 기능 메서드 추출 및 Fixture 리팩터링

* refactor: 쿠키 관련 로직 분리

* test: ArgumentResolver 테스트 추가

* feat: 회원가입 기능 구현

* refactor: 프로덕션 초기 추가하는 데이터와 테스트에 추가되는 데이터가 구분되도록 값 변경

* refactor: MemberService Optional 처리 리팩터링 및 테스트 추가

* refactor: ControllerAdvice 하나만 사용하는 방식으로 리팩터링

* refactor: 쿠키 로직 추가 분리

* test: 테스트 초기 데이터의 id값 null로 설정